[package]
name = "twitchbtevents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.9.2"
tokio = { version = "1.19.2", features = ["full"]}
uuid = {version = "0.8.2", features=["v4"]}
typify = "0.0.8"
serde = "*"
serde_json = "*"
async-trait = "0.1.56"
twitch_api2 = {version = "0.6.1", features=["pubsub", "reqwest", "client","helix", "twitch_oauth2"]}
reqwest = "*"
rpassword = "*"
tokio-tungstenite = {version = "*", features=["native-tls"]}
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
native-tls="*"
dotenv="*"
textnonce="*"
iced={version = "*", features=["tokio", "debug"], git="https://github.com/iced-rs/iced", rev=  "61fd5b0050724a6b05f2b959c546a58cb6073de3"}
iced_native={version="*", path="../iced/native"}
iced_style={version="*", path="../iced/style"}
iced_aw={version="*", git="https://github.com/iced-rs/iced_aw"}
web-sys="0.3.58"
dyn-clone="*"

schemafy="*"
twitch-irc = "5.0.0"
